feature/create-value

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -23,8 +23,8 @@
 		<ul class="menu">
 			<li class="menu"><p>Shop <select name="" id="">
 				<option value="q"></option>
-				<option value="q">1</option>
-				<option value="s">1</option>
+				<option value="q">ajsdsjad</option>
+				<option value="s">xzcasd</option>
 			</select></p>
 
 			</li>
