feature/change-value-select

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -25,6 +25,9 @@
 				<option value="q"></option>
 				<option value="q">ajsdsjad</option>
 				<option value="s">xzcasd</option>
+				<option value="q"></option>
+				<option value="q">ajsdsjad</option>
+				<option value="s">xzcasd</option>
 			</select></p>
 
 			</li>
