feature/create-header-img

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -65,7 +65,7 @@
 			</ul>
 		</div>
 		<div class="home-box2">
-			<p>thasnh 12345</p>
+			<img src="./assets/images/anh.png" alt="">
 		</div>
 	</div>
 </body>
