feauture/create-banner

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -5,12 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://db.onlinewebfonts.com/c/f1fcc5aed1e20fc0cdb9f8a7573625bd?family=Integral+CF+Regular" rel="stylesheet">
+	<link href="https://db.onlinewebfonts.com/c/02d43df8e0b9f0acb1d1c6b40aaa5b7e?family=Satoshi+Light" rel="stylesheet">
 	<title>Demo HTML</title>
 </head>
 
 <body>
 	<div class="sign-up-box">
-		<div class=>
+		<div>
 			<p class="sign-up">Sign up and get 20% off to your first order. <a href="/" class="sign-up">Sign Up Now</a>
 			</p>
 		</div>
@@ -44,29 +46,22 @@
 	</div>
 	<div class="home-box">
 		<div class="home-box1">
-			<p>FIND CLOTHES THAT MATCHES YOUR STYLE</p>
-			<p>Browse through our diverse range of meticulously crafted garments, designed to bring out your
+			<p class="find">FIND CLOTHES THAT MATCHES YOUR STYLE</p>
+			<p class="bowser">Browse through our diverse range of meticulously crafted garments, designed to bring out your
 				individuality and
 				cater to your sense of style.</p>
-			<button>Shop now</button>
-			<ul>
-				<li class="home">
-					<p>200+</p>
-					<p>International Brands</p>
-				</li>
-				<li class="home">
-					<p>2,000+</p>
-					<p>High-Quality Products</p>
-				</li>
-				<li class="home">
-					<p>30,000+</p>
-					<p>Happy Customers</p>
-				</li>
-			</ul>
-		</div>
-		<div class="home-box2">
-			<p>thasnh 12345</p>
-		</div>
-	</div>
+			<button class="home">Shop now</button>
+			<table class="home">
+				<tr class="home">
+					<th>200+</th>
+					<th>2,000+</th>
+					<th>30,000+</th>
+				</tr>
+				<tr>
+					<td>International Brands</td>
+					<td>High-Quality Products</td>
+					<td>Happy Customers</td>
+				</tr>
+			</table>
 </body>
 </html>
