feature/create-banner

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -12,13 +12,13 @@
 
 <body>
 	<div class="sign-up-box">
-		<div>
+		<div class="sign-up">
 			<p class="sign-up">Sign up and get 20% off to your first order. <a href="/" class="sign-up">Sign Up Now</a>
 			</p>
 		</div>
-		<button class="sign-up">
-			<img src="./assets/images/off.svg" alt="">
-		</button>
+    <button class="sign-up">
+      <img src="./assets/images/off.svg" alt="">
+    </button>
 	</div>
 	<div class="menu-box">
 		<p class="shop-co"><b>SHOP.CO</b></p>
@@ -50,18 +50,19 @@
 			<p class="bowser">Browse through our diverse range of meticulously crafted garments, designed to bring out your
 				individuality and
 				cater to your sense of style.</p>
-			<button class="home">Shop now</button>
+			<button class="home"><p class="put">Shop now</p></button>
 			<table class="home">
 				<tr class="home">
-					<th>200+</th>
-					<th>2,000+</th>
-					<th>30,000+</th>
+					<th class="home">200+</th>
+					<th class="home">2,000+</th>
+					<th class="home">30,000+</th>
 				</tr>
 				<tr>
-					<td>International Brands</td>
-					<td>High-Quality Products</td>
-					<td>Happy Customers</td>
+					<td class="home">International Brands</td>
+					<td class="home">High-Quality Products</td>
+					<td class="home">Happy Customers</td>
 				</tr>
 			</table>
+    </div>
 </body>
 </html>
