feature/create-banner

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://db.onlinewebfonts.com/c/f1fcc5aed1e20fc0cdb9f8a7573625bd?family=Integral+CF+Regular" rel="stylesheet">
+	<link href="https://db.onlinewebfonts.com/c/f1fcc5aed1e20fc0cdb9f8a7573625bd?family=Integral+CF+Regular"
+		rel="stylesheet">
 	<link href="https://db.onlinewebfonts.com/c/02d43df8e0b9f0acb1d1c6b40aaa5b7e?family=Satoshi+Light" rel="stylesheet">
 	<title>Demo HTML</title>
 </head>
@@ -16,9 +17,9 @@
 			<p class="sign-up">Sign up and get 20% off to your first order. <a href="/" class="sign-up">Sign Up Now</a>
 			</p>
 		</div>
-    <button class="sign-up">
-      <img src="./assets/images/off.svg" alt="">
-    </button>
+		<button class="sign-up">
+			<img src="./assets/images/off.svg" alt="">
+		</button>
 	</div>
 	<div class="menu-box">
 		<p class="shop-co"><b>SHOP.CO</b></p>
@@ -46,16 +47,19 @@
 	</div>
 	<div class="home-box">
 		<div class="home-box1">
-			<p class="find">FIND CLOTHES THAT MATCHES YOUR STYLE</p>
-			<p class="bowser">Browse through our diverse range of meticulously crafted garments, designed to bring out your
+			<p class="find"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></p>
+			<p class="bowser">Browse through our diverse range of meticulously crafted garments, designed to bring out
+				your
 				individuality and
 				cater to your sense of style.</p>
-			<button class="home"><p class="put">Shop now</p></button>
+			<button class="home">
+				<p class="put">Shop now</p>
+			</button>
 			<table class="home">
 				<tr class="home">
-					<th class="home">200+</th>
-					<th class="home">2,000+</th>
-					<th class="home">30,000+</th>
+					<th class="home"><b>200+</b></th>
+					<th class="home"><b>2,000+</b></th>
+					<th class="home"><b>30,000+</b></th>
 				</tr>
 				<tr>
 					<td class="home">International Brands</td>
@@ -63,6 +67,17 @@
 					<td class="home">Happy Customers</td>
 				</tr>
 			</table>
-    </div>
+		</div>
+		<div class="home-box2">
+			<div class="home-box3">
+				<img src="./assets/images/star.svg" class="star1" alt="">
+			</div>
+			<div class="home-box4">
+				<img src="./assets/images/star.svg" class="star2"  alt="">
+			</div>
+		</div>
+	</div>
+
 </body>
+
 </html>
