--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -14,70 +14,66 @@
 <body>
 	<div class="sign-up-box">
 		<div class="sign-up">
-			<p class="sign-up">Sign up and get 20% off to your first order. <a href="/" class="sign-up">Sign Up Now</a>
+			<p class="text-sign-up">Sign up and get 20% off to your first order. <a href="/" class="a-sign-up">Sign Up Now</a>
 			</p>
 		</div>
-		<button class="sign-up">
+		<button class="button-sign-up">
 			<img src="./assets/images/off.svg" alt="">
 		</button>
 	</div>
 	<div class="menu-box">
 		<p class="shop-co"><b>SHOP.CO</b></p>
 		<ul class="menu">
-			<li class="menu">
-				<p>Shop <select name="" id="">
-						<option value="q"></option>
-						<option value="q">ajsdsjad</option>
-						<option value="s">xzcasd</option>
-						<option value="q"></option>
-						<option value="q">ajsdsjad</option>
-						<option value="s">xzcasd</option>
-					</select></p>
-
+			<li class="li-menu">
+				<p>Shop 
+					<select class="select-home" name="" id="">
+						<option  value="q"></option>
+						<option  value="q">ajsdsjad</option>
+						<option  value="s">xzcasd</option>
+						<option  value="q"></option>
+						<option  value="q">ajsdsjad</option>
+						<option  value="s">xzcasd</option>
+					</select>
+				</p>
 			</li>
-			<li class="menu">On Sale</li>
-			<li class="menu">New Arrivals</li>
-			<li class="menu1">Brand</li>
+			<li class="li-menu">On Sale</li>
+			<li class="li-menu">New Arrivals</li>
+			<li class="li-menu-brand">Brand</li>
 		</ul>
 		<form>
-			<input class="menu" type="text" name="search" placeholder="Search for products...">
+			<input class="input-menu" type="text" name="search" placeholder="Search for products...">
 		</form>
-		<img class="cart" src="./assets/images/cart.svg" alt="">
-		<img class="login" src="./assets/images/login.svg" alt="">
+		<img class="img-cart" src="./assets/images/cart.svg" alt="">
+		<img class="img-login" src="./assets/images/login.svg" alt="">
 	</div>
 	<div class="home-box">
-		<div class="home-box1">
-			<p class="find"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></p>
-			<p class="bowser">Browse through our diverse range of meticulously crafted garments, designed to bring out
-				your
-				individuality and
-				cater to your sense of style.</p>
-			<button class="home">
-				<p class="put">Shop now</p>
+		<div class="home-box-text">
+			<p class="text-find"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></p>
+				<p class="text-bowser">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
+			<button class="button-home">
+				<p class="text-put">Shop now</p>
 			</button>
-			<table class="home">
-				<tr class="home">
-					<th class="home"><b>200+</b></th>
-					<th class="home"><b>2,000+</b></th>
-					<th class="home"><b>30,000+</b></th>
+			<table class="table-home">
+				<tr class="tr-home">
+					<th class="th-home"><b>200+</b></th>
+					<th class="th-home"><b>2,000+</b></th>
+					<th class="th-home"><b>30,000+</b></th>
 				</tr>
 				<tr>
-					<td class="home">International Brands</td>
-					<td class="home">High-Quality Products</td>
-					<td class="home">Happy Customers</td>
+					<td class="td-home">International Brands</td>
+					<td class="td-home">High-Quality Products</td>
+					<td class="td-home">Happy Customers</td>
 				</tr>
 			</table>
 		</div>
-		<div class="home-box2">
-			<div class="home-box3">
-				<img src="./assets/images/star.svg" class="star1" alt="">
+		<div class="home-box-icon">
+			<div class="box-icon">
+				<img src="./assets/images/star.svg" class="img-star-left" alt="">
 			</div>
-			<div class="home-box4">
-				<img src="./assets/images/star.svg" class="star2"  alt="">
+			<div class="box-icon">
+				<img src="./assets/images/star.svg" class="img-star-right"  alt="">
 			</div>
 		</div>
 	</div>
-
 </body>
-
 </html>
