--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -1,79 +1,79 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<link href="https://db.onlinewebfonts.com/c/f1fcc5aed1e20fc0cdb9f8a7573625bd?family=Integral+CF+Regular"
-		rel="stylesheet">
-	<link href="https://db.onlinewebfonts.com/c/02d43df8e0b9f0acb1d1c6b40aaa5b7e?family=Satoshi+Light" rel="stylesheet">
-	<title>Demo HTML</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://db.onlinewebfonts.com/c/f1fcc5aed1e20fc0cdb9f8a7573625bd?family=Integral+CF+Regular"
+    rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+
+  <title>Demo HTML</title>
 </head>
 
 <body>
-	<div class="sign-up-box">
-		<div class="sign-up">
-			<p class="text-sign-up">Sign up and get 20% off to your first order. <a href="/" class="a-sign-up">Sign Up Now</a>
-			</p>
-		</div>
-		<button class="button-sign-up">
-			<img src="./assets/images/off.svg" alt="">
-		</button>
-	</div>
-	<div class="menu-box">
-		<p class="shop-co"><b>SHOP.CO</b></p>
-		<ul class="menu">
-			<li class="li-menu">
-				<p>Shop
-					<select class="select-home" name="" id="">
-						<option  value="q"></option>
-						<option  value="q">ajsdsjad</option>
-						<option  value="s">xzcasd</option>
-						<option  value="q"></option>
-						<option  value="q">ajsdsjad</option>
-						<option  value="s">xzcasd</option>
-					</select>
-				</p>
-			</li>
-			<li class="li-menu">On Sale</li>
-			<li class="li-menu">New Arrivals</li>
-			<li class="li-menu-brand">Brand</li>
-		</ul>
-		<form>
-			<input class="input-menu" type="text" name="search" placeholder="Search for products...">
-		</form>
-		<img class="img-cart" src="./assets/images/cart.svg" alt="">
-		<img class="img-login" src="./assets/images/login.svg" alt="">
-	</div>
-	<div class="home-box">
-		<div class="home-box-text">
-			<p class="text-find"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></p>
-				<p class="text-bowser">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
-			<button class="button-home">
-				<p class="text-put">Shop now</p>
-			</button>
-			<table class="table-home">
-				<tr class="tr-home">
-					<th class="th-home"><b>200+</b></th>
-					<th class="th-home"><b>2,000+</b></th>
-					<th class="th-home"><b>30,000+</b></th>
-				</tr>
-				<tr>
-					<td class="td-home">International Brands</td>
-					<td class="td-home">High-Quality Products</td>
-					<td class="td-home">Happy Customers</td>
-				</tr>
-			</table>
-		</div>
-		<div class="home-box-icon">
-			<div class="box-icon">
-				<img src="./assets/images/star.svg" class="img-star-left" alt="">
-			</div>
-			<div class="box-icon">
-				<img src="./assets/images/star.svg" class="img-star-right"  alt="">
-			</div>
-		</div>
-	</div>
+  <div class="sign-up_section">
+    <div class="container">
+      <p>Sign up and get 20% off to your first order. <a href="/">Sign Up Now</a>
+      </p>
+      <button>
+        <img src="./assets/images/off.svg" alt="">
+      </button>
+    </div>
+  </div>
+  <div class="header_section">
+    <p class="logo"><b>SHOP.CO</b></p>
+    <ul>
+      <li>
+        <p>Shop
+          <select name="test" id="1">
+            <option value="q">ajsdsjad</option>
+            <option value="s">xzcasd</option>
+          </select>
+        </p>
+      </li>
+      <li>On Sale</li>
+      <li>New Arrivals</li>
+      <li>Brand</li>
+    </ul>
+    <form>
+      <input class="search" type="text" name="search" placeholder="Search for products...">
+    </form>
+    <img class="cart" src="./assets/images/cart.svg" alt="">
+    <img class="login" src="./assets/images/login.svg" alt="">
+  </div>
+  <div class="banner_section">
+    <div class="container">
+      <p class="find"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></p>
+      <p class="bowser">Browse through our diverse range of meticulously crafted garments, designed to bring
+        out
+        your individuality and cater to your sense of style.</p>
+      <button>
+        Shop now
+      </button>
+      <table>
+        <tr>
+          <th><b>200+</b></th>
+          <th><b>2,000+</b></th>
+          <th><b>30,000+</b></th>
+        </tr>
+        <tr>
+          <td>International Brands</td>
+          <td>High-Quality Products</td>
+          <td>Happy Customers</td>
+        </tr>
+      </table>
+    </div>
+    <div class="container">
+      <div class="icon">
+        <img src="./assets/images/star.svg" class="icon-left" alt="">
+        <img src="./assets/images/star.svg" class="icon-right" alt="">
+      </div>
+    </div>
+  </div>
+
 </body>
+
 </html>
