update name class for index

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -14,29 +14,29 @@
 </head>
 
 <body>
-  <div class="sign-up_section">
+  <div class="sign-up">
     <div class="container">
-      <p>Sign up and get 20% off to your first order. <a href="/">Sign Up Now</a>
+      <p class="text">Sign up and get 20% off to your first order. <a href="/" class="link">Sign Up Now</a>
       </p>
-      <button>
+      <button class="button-sign-up">
         <img src="./assets/images/off.svg" alt="">
       </button>
     </div>
   </div>
-  <div class="header_section">
+  <div class="nav-bar">
     <p class="logo"><b>SHOP.CO</b></p>
     <ul>
-      <li>
+      <li class="nav-item">
         <p>Shop
-          <select name="test" id="1">
+          <select class="drop-list" name="test" id="1">
             <option value="q">ajsdsjad</option>
             <option value="s">xzcasd</option>
           </select>
         </p>
       </li>
-      <li>On Sale</li>
-      <li>New Arrivals</li>
-      <li>Brand</li>
+      <li class="nav-item">On Sale</li>
+      <li class="nav-item">New Arrivals</li>
+      <li class="nav-item">Brand</li>
     </ul>
     <form>
       <input class="search" type="text" name="search" placeholder="Search for products...">
@@ -44,25 +44,25 @@
     <img class="cart" src="./assets/images/cart.svg" alt="">
     <img class="login" src="./assets/images/login.svg" alt="">
   </div>
-  <div class="banner_section">
+  <div class="banner">
     <div class="container">
-      <p class="find"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></p>
-      <p class="bowser">Browse through our diverse range of meticulously crafted garments, designed to bring
+      <p class="caption"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></p>
+      <p class="content">Browse through our diverse range of meticulously crafted garments, designed to bring
         out
         your individuality and cater to your sense of style.</p>
-      <button>
+      <button class="button-primary">
         Shop now
       </button>
-      <table>
-        <tr>
-          <th><b>200+</b></th>
-          <th><b>2,000+</b></th>
-          <th><b>30,000+</b></th>
+      <table class="tbl">
+        <tr class="tbl-tr">
+          <th class="tbl-th"><b>200+</b></th>
+          <th class="tbl-th"><b>2,000+</b></th>
+          <th class="tbl-th"><b>30,000+</b></th>
         </tr>
         <tr>
-          <td>International Brands</td>
-          <td>High-Quality Products</td>
-          <td>Happy Customers</td>
+          <td class="tbl-td">International Brands</td>
+          <td class="tbl-td">High-Quality Products</td>
+          <td class="tbl-td">Happy Customers</td>
         </tr>
       </table>
     </div>
@@ -73,7 +73,5 @@
       </div>
     </div>
   </div>
-
 </body>
-
 </html>
