use lowercase, update style and comments

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -13,41 +13,49 @@
 </head>
 
 <body>
+  <!-- SIGN UP SECTION START -->
   <div class="sign-up">
-    <p class="text">Sign up and get 20% off to your first order. <a href="/" class="link">Sign Up Now</a>
-    </p>
-    <button class="button-sign-up">
-      <img src="./assets/images/off.svg" alt="">
-    </button>
+    <p class="text">Sign up and get 20% off to your first order. <a href="/" class="link">Sign Up Now</a></p>
+    <img src="./assets/images/off.svg" alt="">
   </div>
+  <!-- SIGN UP SECTION END -->
+
+  <!-- HEADER SECTION START -->
   <div class="nav-bar">
-    <p class="logo"><b>SHOP.CO</b></p>
-    <ul>
-      <li class="nav-item">
-        <p>Shop
+    <div class="container">
+      <ul>
+        <li class="nav-item"><b class="nav-logo">SHOP.CO</b></li>
+        <li class="nav-item">
+          Shop
           <select class="drop-list" name="test" id="1">
             <option value="q">ajsdsjad</option>
             <option value="s">xzcasd</option>
           </select>
-        </p>
-      </li>
-      <li class="nav-item">On Sale</li>
-      <li class="nav-item">New Arrivals</li>
-      <li class="nav-item">Brand</li>
-    </ul>
-    <form>
-      <input class="search" type="text" name="search" placeholder="Search for products...">
-    </form>
-    <img class="cart" src="./assets/images/cart.svg" alt="">
-    <img class="login" src="./assets/images/login.svg" alt="">
+
+        </li>
+        <li class="nav-item">On Sale</li>
+        <li class="nav-item">New Arrivals</li>
+        <li class="nav-item">Brand</li>
+        <li class="nav-item">
+          <form>
+            <input class="nav-search" type="text" name="search" placeholder="Search for products...">
+          </form>
+        </li>
+        <li class="nav-icon"> <img src="./assets/images/cart.svg" alt=""></li>
+        <li class="nav-icon"> <img src="./assets/images/login.svg" alt=""></li>
+      </ul>
+    </div>
   </div>
-  <div class="banner">
+  <!-- HEADER SECTION END -->
+
+  <!-- BANNER SECTION START -->
+  <div class="banner-section">
     <div class="container">
-      <p class="caption"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></p>
-      <p class="content">Browse through our diverse range of meticulously crafted garments, designed to bring
+      <h1><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></h1>
+      <p class="banner-content">Browse through our diverse range of meticulously crafted garments, designed to bring
         out
         your individuality and cater to your sense of style.</p>
-      <button class="button-primary">
+      <button class="btn btn-primary">
         Shop now
       </button>
       <table class="tbl">
@@ -62,14 +70,11 @@
           <td class="tbl-td">Happy Customers</td>
         </tr>
       </table>
-    </div>
-    <div class="container">
-      <div class="icon">
-        <img src="./assets/images/star.svg" class="icon-left" alt="">
-        <img src="./assets/images/star.svg" class="icon-right" alt="">
-      </div>
+      <img src="./assets/images/star.svg" class="icon-left" alt="">
+      <img src="./assets/images/star.svg" class="icon-right" alt="">
     </div>
   </div>
+  <!-- BANNER SECTION END -->
 </body>
 
 </html>
