create brand and arrivals

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -75,6 +75,111 @@
     </div>
   </div>
   <!-- BANNER SECTION END -->
+
+  <!-- BRAND SECTION START -->
+  <div class="brand-section">
+    <div class="container">
+      <ul class="brand-ul">
+        <li class="brand-item"><img src="./assets/images/versace.svg" alt=""></li>
+        <li class="brand-item"><img src="./assets/images/zara.svg" alt=""></li>
+        <li class="brand-item"><img src="./assets/images/gucci.svg" alt=""></li>
+        <li class="brand-item"><img src="./assets/images/prada.svg" alt=""></li>
+        <li class="brand-item"><img src="./assets/images/calvin.svg" alt=""></li>
+      </ul>
+    </div>
+  </div>
+  <!-- BRAND SECTION END -->
+
+  <!-- ARRIVAL SECTION START -->
+  <div class="arrival-section">
+    <div class="container">
+      <h2>NEW ARRIVALS</h2>
+      <ul>
+        <li class="arrival-item">
+          <img class="arrival-img" src="./assets/images/image7.png" alt="">
+          <p class="name">T-shirt With Tape Details</p>
+          <div class="evaluate">
+            <div>
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star5.svg" class="arrival-star" alt="">
+            </div>
+            <div class="evaluate-num">
+              <p>4.5/<span class="span-num">5</span></p>
+            </div>
+          </div>
+          <div class="arrival-desc">
+            <p class="price">$120</p>
+          </div>
+        </li >
+        <li   class="arrival-item"><img class="arrival-img" src="./assets/images/image8.png" alt="">
+          <p class="name">Skinny Fit Jeans</p>
+          <div class="evaluate">
+            <div>
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star5.svg" class="arrival-star" alt="">
+            </div>
+            <div class="evaluate-num">
+              <p>3.5/<span class="span-num">5</span></p>
+            </div>
+          </div>
+          <div class="arrival-desc">
+            <p class="price">$240</p>
+            <p class="sell">$260</p>
+            <p class="percent">-20%</p>
+          </div>
+        </li>
+        <li  class="arrival-item">
+          <img class="arrival-img" src="./assets/images/image9.png" alt="">
+          <p class="name">Checkered Shirt</p>
+          <div class="evaluate">
+            <div>
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star5.svg" class="arrival-star" alt="">
+            </div>
+            <div class="evaluate-num">
+              <p>4.5/<span class="span-num">5</span></p>
+            </div>
+          </div>
+          <div class="arrival-desc">
+            <p class="price">$180</p>
+          </div>
+        </li>
+        <li  class="arrival-item">
+          <img class="arrival-img" src="./assets/images/image10.png" alt="">
+          <p class="name">Sleeve Striped T-shirt</p>
+          <div class="evaluate">
+            <div>
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star5.svg" class="arrival-star" alt="">
+            </div>
+            <div class="evaluate-num">
+              <p>4.5/<span class="span-num">5</span></p>
+            </div>
+          </div>
+          <div class="arrival-desc">
+            <p class="price">$130</p>
+            <p class="sell">$160</p>
+            <p class="percent">-30%</p>
+          </div>
+        </li>
+      </ul>
+      <button class="btn btn-secondary">
+        View All
+      </button>
+    </div>
+  </div>
+  <!-- ARRIVAL SECTION END -->
 </body>
 
 </html>
