fix comments PR

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -51,7 +51,7 @@
   <!-- BANNER SECTION START -->
   <div class="banner-section">
     <div class="container">
-      <h1><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></h1>
+      <h1 class="tle primary-tle"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></h1>
       <p class="banner-content">Browse through our diverse range of meticulously crafted garments, designed to bring
         out
         your individuality and cater to your sense of style.</p>
@@ -79,7 +79,7 @@
   <!-- BRAND SECTION START -->
   <div class="brand-section">
     <div class="container">
-      <ul class="brand-ul">
+      <ul class="brand-bar">
         <li class="brand-item"><img src="./assets/images/versace.svg" alt=""></li>
         <li class="brand-item"><img src="./assets/images/zara.svg" alt=""></li>
         <li class="brand-item"><img src="./assets/images/gucci.svg" alt=""></li>
@@ -93,10 +93,10 @@
   <!-- ARRIVAL SECTION START -->
   <div class="arrival-section">
     <div class="container">
-      <h2>NEW ARRIVALS</h2>
+      <h2 class="tle secondary-tle">NEW ARRIVALS</h2>
       <ul>
         <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/image7.png" alt="">
+          <img class="arrival-img" src="./assets/images/tapedetails.png" alt="">
           <p class="name">T-shirt With Tape Details</p>
           <div class="evaluate">
             <div>
@@ -111,10 +111,10 @@
             </div>
           </div>
           <div class="arrival-desc">
-            <p class="price">$120</p>
+            <p class="price">&#36;120</p>
           </div>
         </li >
-        <li   class="arrival-item"><img class="arrival-img" src="./assets/images/image8.png" alt="">
+        <li   class="arrival-item"><img class="arrival-img" src="./assets/images/fitjeans.png" alt="">
           <p class="name">Skinny Fit Jeans</p>
           <div class="evaluate">
             <div>
@@ -128,13 +128,13 @@
             </div>
           </div>
           <div class="arrival-desc">
-            <p class="price">$240</p>
-            <p class="sell">$260</p>
+            <p class="price">&#36;240</p>
+            <p class="sell">&#36;260</p>
             <p class="percent">-20%</p>
           </div>
         </li>
         <li  class="arrival-item">
-          <img class="arrival-img" src="./assets/images/image9.png" alt="">
+          <img class="arrival-img" src="./assets/images/checkeredshirt.png" alt="">
           <p class="name">Checkered Shirt</p>
           <div class="evaluate">
             <div>
@@ -149,11 +149,11 @@
             </div>
           </div>
           <div class="arrival-desc">
-            <p class="price">$180</p>
+            <p class="price">&#36;180</p>
           </div>
         </li>
         <li  class="arrival-item">
-          <img class="arrival-img" src="./assets/images/image10.png" alt="">
+          <img class="arrival-img" src="./assets/images/stripedtshirt.png" alt="">
           <p class="name">Sleeve Striped T-shirt</p>
           <div class="evaluate">
             <div>
@@ -168,8 +168,8 @@
             </div>
           </div>
           <div class="arrival-desc">
-            <p class="price">$130</p>
-            <p class="sell">$160</p>
+            <p class="price">&#36;130</p>
+            <p class="sell">&#36;160</p>
             <p class="percent">-30%</p>
           </div>
         </li>
