--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -51,7 +51,7 @@
   <!-- BANNER SECTION START -->
   <div class="banner-section">
     <div class="container">
-      <h1 class="tle primary-tle"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></h1>
+      <h1 class="title primary-title"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></h1>
       <p class="banner-content">Browse through our diverse range of meticulously crafted garments, designed to bring
         out
         your individuality and cater to your sense of style.</p>
@@ -93,7 +93,7 @@
   <!-- ARRIVAL SECTION START -->
   <div class="arrival-section">
     <div class="container">
-      <h2 class="tle secondary-tle">NEW ARRIVALS</h2>
+      <h2 class="title secondary-title">NEW ARRIVALS</h2>
       <ul>
         <li class="arrival-item">
           <img class="arrival-img" src="./assets/images/tapedetails.png" alt="">
