rename image file

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -96,7 +96,7 @@
       <h2 class="title secondary-title">NEW ARRIVALS</h2>
       <ul>
         <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/tapedetails.png" alt="">
+          <img class="arrival-img" src="./assets/images/tapede-tails.png" alt="">
           <p class="name">T-shirt With Tape Details</p>
           <div class="evaluate">
             <div>
@@ -114,7 +114,7 @@
             <p class="price">&#36;120</p>
           </div>
         </li >
-        <li   class="arrival-item"><img class="arrival-img" src="./assets/images/fitjeans.png" alt="">
+        <li   class="arrival-item"><img class="arrival-img" src="./assets/images/fit-jeans.png" alt="">
           <p class="name">Skinny Fit Jeans</p>
           <div class="evaluate">
             <div>
@@ -134,7 +134,7 @@
           </div>
         </li>
         <li  class="arrival-item">
-          <img class="arrival-img" src="./assets/images/checkeredshirt.png" alt="">
+          <img class="arrival-img" src="./assets/images/checkered-shirt.png" alt="">
           <p class="name">Checkered Shirt</p>
           <div class="evaluate">
             <div>
@@ -153,7 +153,7 @@
           </div>
         </li>
         <li  class="arrival-item">
-          <img class="arrival-img" src="./assets/images/stripedtshirt.png" alt="">
+          <img class="arrival-img" src="./assets/images/striped-t-shirt.png" alt="">
           <p class="name">Sleeve Striped T-shirt</p>
           <div class="evaluate">
             <div>
