--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -16,7 +16,7 @@
   <!-- SIGN UP SECTION START -->
   <div class="sign-up">
     <p class="text">Sign up and get 20% off to your first order. <a href="/" class="link">Sign Up Now</a></p>
-    <img src="./assets/images/off.svg" alt="">
+    <img src="./assets/images/off.svg" alt="off">
   </div>
   <!-- SIGN UP SECTION END -->
 
@@ -41,8 +41,8 @@
             <input class="nav-search" type="text" name="search" placeholder="Search for products...">
           </form>
         </li>
-        <li class="nav-icon"> <img src="./assets/images/cart.svg" alt=""></li>
-        <li class="nav-icon"> <img src="./assets/images/login.svg" alt=""></li>
+        <li class="nav-icon"> <img src="./assets/images/cart.svg" alt="cart"></li>
+        <li class="nav-icon"> <img src="./assets/images/login.svg" alt="login"></li>
       </ul>
     </div>
   </div>
@@ -70,8 +70,8 @@
           <td class="tbl-td">Happy Customers</td>
         </tr>
       </table>
-      <img src="./assets/images/star.svg" class="icon-left" alt="">
-      <img src="./assets/images/star.svg" class="icon-right" alt="">
+      <img src="./assets/images/star.svg" class="icon-left" alt="star">
+      <img src="./assets/images/star.svg" class="icon-right" alt="star">
     </div>
   </div>
   <!-- BANNER SECTION END -->
@@ -80,11 +80,11 @@
   <div class="brand-section">
     <div class="container">
       <ul class="brand-bar">
-        <li class="brand-item"><img src="./assets/images/versace.svg" alt=""></li>
-        <li class="brand-item"><img src="./assets/images/zara.svg" alt=""></li>
-        <li class="brand-item"><img src="./assets/images/gucci.svg" alt=""></li>
-        <li class="brand-item"><img src="./assets/images/prada.svg" alt=""></li>
-        <li class="brand-item"><img src="./assets/images/calvin.svg" alt=""></li>
+        <li class="brand-item"><img src="./assets/images/versace.svg" alt="versace"></li>
+        <li class="brand-item"><img src="./assets/images/zara.svg" alt="zara"></li>
+        <li class="brand-item"><img src="./assets/images/gucci.svg" alt="gucci"></li>
+        <li class="brand-item"><img src="./assets/images/prada.svg" alt="prada"></li>
+        <li class="brand-item"><img src="./assets/images/calvin.svg" alt="calvin"></li>
       </ul>
     </div>
   </div>
@@ -96,15 +96,15 @@
       <h2 class="title secondary-title">NEW ARRIVALS</h2>
       <ul>
         <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/tapede-tails.png" alt="">
+          <img class="arrival-img" src="./assets/images/tapede-tails.png" alt="tapede-tails">
           <p class="name">T-shirt With Tape Details</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star5.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>4.5/<span class="span-num">5</span></p>
@@ -114,14 +114,14 @@
             <p class="price">&#36;120</p>
           </div>
         </li >
-        <li   class="arrival-item"><img class="arrival-img" src="./assets/images/fit-jeans.png" alt="">
+        <li   class="arrival-item"><img class="arrival-img" src="./assets/images/fit-jeans.png" alt="fit-jeans">
           <p class="name">Skinny Fit Jeans</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star5.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>3.5/<span class="span-num">5</span></p>
@@ -134,15 +134,15 @@
           </div>
         </li>
         <li  class="arrival-item">
-          <img class="arrival-img" src="./assets/images/checkered-shirt.png" alt="">
+          <img class="arrival-img" src="./assets/images/checkered-shirt.png" alt="checkered-shirt">
           <p class="name">Checkered Shirt</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star5.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>4.5/<span class="span-num">5</span></p>
@@ -153,15 +153,15 @@
           </div>
         </li>
         <li  class="arrival-item">
-          <img class="arrival-img" src="./assets/images/striped-t-shirt.png" alt="">
+          <img class="arrival-img" src="./assets/images/striped-t-shirt.png" alt="striped-t-shirt">
           <p class="name">Sleeve Striped T-shirt</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star3.svg" class="arrival-star" alt="">
-              <img src="./assets/images/star5.svg" class="arrival-star" alt="">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>4.5/<span class="span-num">5</span></p>
