create top selling and browse

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -24,25 +24,25 @@
   <div class="nav-bar">
     <div class="container">
       <ul>
-        <li class="nav-item"><b class="nav-logo">SHOP.CO</b></li>
+        <li class="nav-item"><a href="/"><b class="nav-logo">SHOP.CO</b></a></li>
         <li class="nav-item">
-          Shop
+          <a href="">Shop</a>
           <select class="drop-list" name="test" id="1">
-            <option value="q">ajsdsjad</option>
-            <option value="s">xzcasd</option>
+            <option value="q"><a href="/">ajsdsjad</a></option>
+            <option value="s"><a href="/">xzcasd</a></option>
           </select>
 
         </li>
-        <li class="nav-item">On Sale</li>
-        <li class="nav-item">New Arrivals</li>
-        <li class="nav-item">Brand</li>
+        <li class="nav-item"><a href="/">On Sale</a></li>
+        <li class="nav-item"><a href="/">New Arrivals</a></li>
+        <li class="nav-item"><a href="/">Brand</a></li>
         <li class="nav-item">
           <form>
             <input class="nav-search" type="text" name="search" placeholder="Search for products...">
           </form>
         </li>
-        <li class="nav-icon"> <img src="./assets/images/cart.svg" alt="cart"></li>
-        <li class="nav-icon"> <img src="./assets/images/login.svg" alt="login"></li>
+        <li class="nav-icon"><a href="/"> <img src="./assets/images/cart.svg" alt="cart"></a></li>
+        <li class="nav-icon"><a href="/"> <img src="./assets/images/login.svg" alt="login"></a></li>
       </ul>
     </div>
   </div>
@@ -113,8 +113,8 @@
           <div class="arrival-desc">
             <p class="price">&#36;120</p>
           </div>
-        </li >
-        <li   class="arrival-item"><img class="arrival-img" src="./assets/images/fit-jeans.png" alt="fit-jeans">
+        </li>
+        <li class="arrival-item"><img class="arrival-img" src="./assets/images/fit-jeans.png" alt="fit-jeans">
           <p class="name">Skinny Fit Jeans</p>
           <div class="evaluate">
             <div>
@@ -133,7 +133,7 @@
             <p class="percent">-20%</p>
           </div>
         </li>
-        <li  class="arrival-item">
+        <li class="arrival-item">
           <img class="arrival-img" src="./assets/images/checkered-shirt.png" alt="checkered-shirt">
           <p class="name">Checkered Shirt</p>
           <div class="evaluate">
@@ -152,7 +152,7 @@
             <p class="price">&#36;180</p>
           </div>
         </li>
-        <li  class="arrival-item">
+        <li class="arrival-item">
           <img class="arrival-img" src="./assets/images/striped-t-shirt.png" alt="striped-t-shirt">
           <p class="name">Sleeve Striped T-shirt</p>
           <div class="evaluate">
@@ -180,6 +180,112 @@
     </div>
   </div>
   <!-- ARRIVAL SECTION END -->
+  <hr>
+  <!-- TOP SELLING SECTION START -->
+  <div class="topsell-section">
+    <div class="container">
+      <h2 class="title secondary-title">TOP SELLING</h2>
+      <ul>
+        <li class="arrival-item">
+          <img class="arrival-img" src="./assets/images/veritical.png" alt="">
+          <p class="name">Veritical Striped Shirt</p>
+          <div class="evaluate">
+            <div>
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+            </div>
+            <div class="evaluate-num">
+              <p>5/<span class="span-num">5</span></p>
+            </div>
+          </div>
+          <div class="arrival-desc">
+            <p class="price">&#36;212</p>
+            <p class="sell">&#36;232</p>
+            <p class="percent">-20%</p>
+          </div>
+        </li>
+        <li class="arrival-item"><img class="arrival-img" src="./assets/images/courage.png" alt="">
+          <p class="name">Courage Graphic T-shirt</p>
+          <div class="evaluate">
+            <div>
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
+            </div>
+            <div class="evaluate-num">
+              <p>4/<span class="span-num">5</span></p>
+            </div>
+          </div>
+          <div class="arrival-desc">
+            <p class="price">&#36;145</p>
+          </div>
+        </li>
+        <li class="arrival-item">
+          <img class="arrival-img" src="./assets/images/loose-fit.png" alt="">
+          <p class="name">Loose Fit Bermuda Short</p>
+          <div class="evaluate">
+            <div>
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+            </div>
+            <div class="evaluate-num">
+              <p>5/<span class="arrival-span">5</span></p>
+            </div>
+          </div>
+          <div class="arrival-desc">
+            <p class="price">&#36;80</p>
+          </div>
+        </li>
+        <li class="arrival-item">
+          <img class="arrival-img" src="./assets/images/faded-skinny.png" alt="">
+          <p class="name">Faded Skinny Jeans</p>
+          <div class="evaluate">
+            <div>
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
+            </div>
+            <div class="evaluate-num">
+              <p>4.5/<span class="span-num">5</span></p>
+            </div>
+          </div>
+          <div class="arrival-desc">
+            <p class="price">&#36;210</p>
+          </div>
+        </li>
+      </ul>
+      <button class="btn btn-secondary">
+        View All
+      </button>
+    </div>
+  </div>
+  <!-- TOP SELLING SECTION END -->
+
+  <!-- BROWES SECTION START -->
+  <div class="browse-section">
+    <h2 class="title third-title">BROWSE BY DRESS STYLE</h2>
+    <div class="browse-item">
+      <img class="browes-img" src="./assets/images/casual.png" alt="">
+      <p class="desc top-left">Casual</p>
+      <img class="browes-img" src="./assets/images/formal.png" alt="">
+      <p class="desc top-right">Formal</p>
+      <img class="browes-img" src="./assets/images/party.png" alt="">
+      <p class="desc bot-left">Party</p>
+      <img class="browes-img" src="./assets/images/gym.png" alt="">
+      <p class="desc bot-right">Gym</p>
+    </div>
+  </div>
+  <!-- BROWES SECTION END -->
 </body>
 
 </html>
