--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -16,7 +16,7 @@
   <!-- SIGN UP SECTION START -->
   <div class="sign-up">
     <p class="text">Sign up and get 20% off to your first order. <a href="/" class="link">Sign Up Now</a></p>
-    <img src="./assets/images/off.svg" alt="off">
+    <a href="/"><img src="./assets/images/off.svg" alt="off"></a>
   </div>
   <!-- SIGN UP SECTION END -->
 
@@ -95,79 +95,79 @@
     <div class="container">
       <h2 class="title secondary-title">NEW ARRIVALS</h2>
       <ul>
-        <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/tapede-tails.png" alt="tapede-tails">
+        <li class="product-item">
+          <img class="product-img" src="./assets/images/tapede-tails.png" alt="tapede-tails">
           <p class="name">T-shirt With Tape Details</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-half.svg" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>4.5/<span class="span-num">5</span></p>
             </div>
           </div>
-          <div class="arrival-desc">
+          <div class="product-desc">
             <p class="price">&#36;120</p>
           </div>
         </li>
-        <li class="arrival-item"><img class="arrival-img" src="./assets/images/fit-jeans.png" alt="fit-jeans">
+        <li class="product-item"><img class="product-img" src="./assets/images/fit-jeans.png" alt="fit-jeans">
           <p class="name">Skinny Fit Jeans</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-half">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>3.5/<span class="span-num">5</span></p>
             </div>
           </div>
-          <div class="arrival-desc">
+          <div class="product-desc">
             <p class="price">&#36;240</p>
             <p class="sell">&#36;260</p>
             <p class="percent">-20%</p>
           </div>
         </li>
-        <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/checkered-shirt.png" alt="checkered-shirt">
+        <li class="product-item">
+          <img class="product-img" src="./assets/images/checkered-shirt.png" alt="checkered-shirt">
           <p class="name">Checkered Shirt</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-half.svg" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>4.5/<span class="span-num">5</span></p>
             </div>
           </div>
-          <div class="arrival-desc">
+          <div class="product-desc">
             <p class="price">&#36;180</p>
           </div>
         </li>
-        <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/striped-t-shirt.png" alt="striped-t-shirt">
+        <li class="product-item">
+          <img class="product-img" src="./assets/images/striped-t-shirt.png" alt="striped-t-shirt">
           <p class="name">Sleeve Striped T-shirt</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-half.svg" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>4.5/<span class="span-num">5</span></p>
             </div>
           </div>
-          <div class="arrival-desc">
+          <div class="product-desc">
             <p class="price">&#36;130</p>
             <p class="sell">&#36;160</p>
             <p class="percent">-30%</p>
@@ -175,8 +175,7 @@
         </li>
       </ul>
       <button class="btn btn-secondary">
-        View All
-      </button>
+        <a href="#">View All</a>
     </div>
   </div>
   <!-- ARRIVAL SECTION END -->
@@ -186,86 +185,86 @@
     <div class="container">
       <h2 class="title secondary-title">TOP SELLING</h2>
       <ul>
-        <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/veritical.png" alt="">
+        <li class="product-item">
+          <img class="product-img" src="./assets/images/veritical.png" alt="">
           <p class="name">Veritical Striped Shirt</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
             </div>
             <div class="evaluate-num">
               <p>5/<span class="span-num">5</span></p>
             </div>
           </div>
-          <div class="arrival-desc">
+          <div class="product-desc">
             <p class="price">&#36;212</p>
             <p class="sell">&#36;232</p>
             <p class="percent">-20%</p>
           </div>
         </li>
-        <li class="arrival-item"><img class="arrival-img" src="./assets/images/courage.png" alt="">
+        <li class="product-item"><img class="product-img" src="./assets/images/courage.png" alt="">
           <p class="name">Courage Graphic T-shirt</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-half.svg" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>4/<span class="span-num">5</span></p>
             </div>
           </div>
-          <div class="arrival-desc">
+          <div class="product-desc">
             <p class="price">&#36;145</p>
           </div>
         </li>
-        <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/loose-fit.png" alt="">
+        <li class="product-item">
+          <img class="product-img" src="./assets/images/loose-fit.png" alt="">
           <p class="name">Loose Fit Bermuda Short</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
             </div>
             <div class="evaluate-num">
-              <p>5/<span class="arrival-span">5</span></p>
+              <p>5/<span class="product-span">5</span></p>
             </div>
           </div>
-          <div class="arrival-desc">
+          <div class="product-desc">
             <p class="price">&#36;80</p>
           </div>
         </li>
-        <li class="arrival-item">
-          <img class="arrival-img" src="./assets/images/faded-skinny.png" alt="">
+        <li class="product-item">
+          <img class="product-img" src="./assets/images/faded-skinny.png" alt="">
           <p class="name">Faded Skinny Jeans</p>
           <div class="evaluate">
             <div>
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-full.svg" class="arrival-star" alt="star-full">
-              <img src="./assets/images/star-half.svg" class="arrival-star" alt="star-half">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-full.svg" alt="star-full">
+              <img src="./assets/images/star-half.svg" alt="star-half">
             </div>
             <div class="evaluate-num">
               <p>4.5/<span class="span-num">5</span></p>
             </div>
           </div>
-          <div class="arrival-desc">
+          <div class="product-desc">
             <p class="price">&#36;210</p>
           </div>
         </li>
       </ul>
       <button class="btn btn-secondary">
-        View All
+        <a href="/">View All</a>
       </button>
     </div>
   </div>
