update alt image

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -186,7 +186,7 @@
       <h2 class="title secondary-title">TOP SELLING</h2>
       <ul>
         <li class="product-item">
-          <img class="product-img" src="./assets/images/veritical.png" alt="">
+          <img class="product-img" src="./assets/images/veritical.png" alt="veritical">
           <p class="name">Veritical Striped Shirt</p>
           <div class="evaluate">
             <div>
@@ -206,7 +206,7 @@
             <p class="percent">-20%</p>
           </div>
         </li>
-        <li class="product-item"><img class="product-img" src="./assets/images/courage.png" alt="">
+        <li class="product-item"><img class="product-img" src="./assets/images/courage.png" alt="courage">
           <p class="name">Courage Graphic T-shirt</p>
           <div class="evaluate">
             <div>
@@ -225,7 +225,7 @@
           </div>
         </li>
         <li class="product-item">
-          <img class="product-img" src="./assets/images/loose-fit.png" alt="">
+          <img class="product-img" src="./assets/images/loose-fit.png" alt="loose-fit">
           <p class="name">Loose Fit Bermuda Short</p>
           <div class="evaluate">
             <div>
@@ -244,7 +244,7 @@
           </div>
         </li>
         <li class="product-item">
-          <img class="product-img" src="./assets/images/faded-skinny.png" alt="">
+          <img class="product-img" src="./assets/images/faded-skinny.png" alt="faded-skinny>
           <p class="name">Faded Skinny Jeans</p>
           <div class="evaluate">
             <div>
@@ -274,13 +274,13 @@
   <div class="browse-section">
     <h2 class="title third-title">BROWSE BY DRESS STYLE</h2>
     <div class="browse-item">
-      <img class="browes-img" src="./assets/images/casual.png" alt="">
+      <img class="browes-img" src="./assets/images/casual.png" alt="casual">
       <p class="desc top-left">Casual</p>
-      <img class="browes-img" src="./assets/images/formal.png" alt="">
+      <img class="browes-img" src="./assets/images/formal.png" alt="formal">
       <p class="desc top-right">Formal</p>
-      <img class="browes-img" src="./assets/images/party.png" alt="">
+      <img class="browes-img" src="./assets/images/party.png" alt="party">
       <p class="desc bot-left">Party</p>
-      <img class="browes-img" src="./assets/images/gym.png" alt="">
+      <img class="browes-img" src="./assets/images/gym.png" alt="gym">
       <p class="desc bot-right">Gym</p>
     </div>
   </div>
